src/parse.c
#include "parser.h"
#include "parse.h"
#include "token.h"
#include "ast.h"

#include <string.h>
#include <stdlib.h>
#include <errno.h>

// program = [ ns_decl ] { use_decl } { top_level_decl }
ast_node_t* parse_program(parser_t* parser) {
  ast_node_t* node = ast_alloc(parser->arena, AST_PROGRAM);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->program.namespace = NULL;
  node->program.uses = (ast_node_list_t) { 0 };

  size_t start, count;

  if (parser->current.type == TOK_NS) {
    node->program.namespace = parse_ns_decl(parser);
    if (!node->program.namespace) return NULL;
  }

  start = parser->stack->count;

  while (parser->current.type == TOK_USE)
    if (!ast_node_stack_push(parser->stack, parse_use_decl(parser))) return NULL;

  count = parser->stack->count - start;
  parser->stack->count = start;
  
  if (count > 0) {
    node->program.uses.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!node->program.uses.items) return NULL;

    node->program.uses.count = count;
    memcpy(node->program.uses.items, parser->stack->items + start, count * sizeof(ast_node_t*));
  }

  start = parser->stack->count;

  // top_level_decl = { func_decl | rec_decl | var_decl }
  while (parser->current.type != TOK_EOF) {
    if (!ast_node_stack_push(parser->stack, parse_top_level_decl(parser))) return NULL;
  }

  count = parser->stack->count - start;
  parser->stack->count = start;

  if (count > 0) {
    node->program.decls.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!node->program.decls.items) return NULL;

    memcpy(node->program.decls.items, parser->stack->items + start, count * sizeof(ast_node_t*));
    node->program.decls.count = count;
  }

  node->src_span.end = parser->current.src_span.end;

  return node;
}

ast_node_t* parse_top_level_decl(parser_t* parser) {
  if (parser->current.type == TOK_RECORD)
    return parse_rec_decl(parser);

  if (parser_lookahead(parser, is_var_decl_start))
    return parse_var_decl(parser);

  return parse_func_decl(parser);
}

ast_node_t* parse_id(parser_t* parser) {
  if (parser->current.type != TOK_ID) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_ID);
  if (!node) return NULL;

  node->src_span = parser->current.src_span;
  
  node->id.name = parser->current.lexeme;
  node->id.length = parser->current.length;

  parser_advance(parser);

  return node;
}

bool is_qual_id(parser_t* parser) {
  if (!parser_consume(parser, TOK_ID)) return false;

  while (parser_consume(parser, TOK_COLCOL))
    if (!parser_consume(parser, TOK_ID)) return false;

  return true;
}

// qual_id = id { "::" id }
ast_node_t* parse_qual_id(parser_t* parser) {
  if (parser->current.type != TOK_ID) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_QUAL_ID);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  size_t start = parser->stack->count;
  if (!ast_node_stack_push(parser->stack, parse_id(parser))) return NULL;

  while (parser_consume(parser, TOK_COLCOL))
    if (!ast_node_stack_push(parser->stack, parse_id(parser))) return NULL;

  node->src_span.end = ast_node_stack_top(parser->stack)->src_span.end;

  size_t count = parser->stack->count - start;

  node->qual_id.parts.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
  if (!node->qual_id.parts.items) return NULL;
  node->qual_id.parts.count = count;

  memcpy(node->qual_id.parts.items, parser->stack->items + start, count * sizeof(ast_node_t*));

  parser->stack->count = start;

  return node;
}

// ns_decl = "namespace" qual_id ";"
ast_node_t* parse_ns_decl(parser_t* parser) {
  if (parser->current.type != TOK_NS) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_NS_DECL);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;
  parser_advance(parser);

  node->ns_decl.name = parse_qual_id(parser);
  if (!node->ns_decl.name) return NULL;

  if (parser->current.type != TOK_SEMICOLON) return NULL;

  node->src_span.end = parser->current.src_span.end;

  parser_advance(parser);

  return node;
}

// use_decl = "use" qual_id [ "as" id ]
ast_node_t* parse_use_decl(parser_t* parser) {
  if (parser->current.type != TOK_USE) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_USE_DECL);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;
  node->use_decl.alias = NULL;

  parser_advance(parser);

  node->use_decl.name = parse_qual_id(parser);
  if (!node->use_decl.name) return NULL;

  if (parser_consume(parser, TOK_AS)) {
    node->use_decl.alias = parse_id(parser);
    if (!node->use_decl.alias) return NULL;
  }

  if (parser->current.type != TOK_SEMICOLON) return NULL;

  node->src_span.end = parser->current.src_span.end;

  parser_advance(parser);

  return node;
}

// rec_decl = "record" id "=" "{" { rec_field_decl | rec_decl } "}" ";"
ast_node_t* parse_rec_decl(parser_t* parser) {
  if (parser->current.type != TOK_RECORD) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_REC_DECL);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  parser_advance(parser);

  node->rec_decl.name = parse_id(parser);
  if (!node->rec_decl.name) return NULL;

  if (!parser_consume(parser, TOK_LCURL)) return NULL;

  size_t start, count;
  start = parser->stack->count;

  while (!parser_consume(parser, TOK_RCURL)) {
    if (parser->current.type == TOK_RECORD) {
      if (!ast_node_stack_push(parser->stack, parse_rec_decl(parser))) return NULL;
    }
    else {
      if (!ast_node_stack_push(parser->stack, parse_rec_field_decl(parser))) return NULL;
    }
  }

  if (parser->current.type != TOK_SEMICOLON) return NULL;
  node->src_span.end = parser->current.src_span.end;
  parser_advance(parser);

  count = parser->stack->count - start;
  parser->stack->count = start;

  node->rec_decl.fields = (ast_node_list_t) { 0 };

  if (count > 0) {
    node->rec_decl.fields.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!node->rec_decl.fields.items) return NULL;

    memcpy(node->rec_decl.fields.items, parser->stack->items + start, count * sizeof(ast_node_t*));

    node->rec_decl.fields.count = count;
  }

  return node;
}

// rec_field_decl = type id ";"
ast_node_t* parse_rec_field_decl(parser_t* parser) {
  ast_node_t* node = ast_alloc(parser->arena, AST_REC_FIELD_DECL);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->rec_field_decl.type = parse_type(parser);
  if (!node->rec_field_decl.type) return NULL;

  node->rec_field_decl.name = parse_id(parser);
  if (!node->rec_field_decl.name) return NULL;

  if (parser->current.type != TOK_SEMICOLON) return NULL;

  node->src_span.end = parser->current.src_span.end;

  parser_advance(parser);

  return node;
}

// type = ( builtin_type | qual_id ) { "*" } { "[" int_lit "]" }
ast_node_t* parse_type(parser_t* parser) {
  ast_node_t* node = ast_alloc(parser->arena, AST_TYPE);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;
  
  if (is_builtin_type(parser)) {
    node->type.base = parse_builtin_type(parser);
    if (!node->type.base) return NULL;
  } else {
    node->type.base = parse_qual_id(parser);
    if (!node->type.base) return NULL;
  }

  size_t ptr_depth = 0;
  while (parser_consume(parser, TOK_ASTERISK))
    ptr_depth++;

  node->type.ptr_depth = ptr_depth;

  size_t start, count;
  start = parser->stack->count;

  while (parser_consume(parser, TOK_LBRACK)) {
    if (parser_consume(parser, TOK_RBRACK)) {
      // this is a pretty freaky NULL ptr workaround - do not try this at home
      parser->stack->items[parser->stack->count++] = (ast_node_t*) NULL;
      continue;
    }

    if (!ast_node_stack_push(parser->stack, parse_int_lit(parser))) return NULL;
    
    if (!parser_consume(parser, TOK_RBRACK)) return NULL;
  }

  node->src_span.end = parser->current.src_span.end;
  node->type.dimensions = (ast_node_list_t) { 0 };

  count = parser->stack->count - start;
  parser->stack->count = start;

  if (count > 0) {
    node->type.dimensions.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!node->type.dimensions.items) return NULL;

    memcpy(node->type.dimensions.items, parser->stack->items + start, count * sizeof(ast_node_t*));
    if (!node->type.dimensions.items) return NULL;

    node->type.dimensions.count = count;
  }

  return node;
}

bool is_builtin_type(parser_t* parser) {
  switch (parser->current.type) {
    case TOK_BOOL:
    case TOK_BYTE:
    case TOK_I8: case TOK_I16: case TOK_I32: case TOK_I64:
    case TOK_U8: case TOK_U16: case TOK_U32: case TOK_U64:
    case TOK_F32: case TOK_F64:
    case TOK_STRING:
      return true;
    default: return false;
  }
}
ast_node_t* parse_builtin_type(parser_t* parser) {
  if (!is_builtin_type(parser)) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_BUILTIN_TYPE);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;
  node->builtin_type.type = parser->current.type;

  parser_advance(parser);

  node->src_span.end = parser->current.src_span.end;

  return node;
}

bool is_primitve_lit(parser_t* parser) {
  switch (parser->current.type) {
    case TOK_BOOLLIT:
    case TOK_BYTELIT:
    case TOK_FLOATLIT:
    case TOK_INTLIT:
    case TOK_STRLIT:
      return true;
    default: false;
  }
  return false;
}

ast_node_t* parse_primitive_lit(parser_t* parser) {
  switch (parser->current.type) {
    case TOK_BOOLLIT: return parse_bool_lit(parser);
    case TOK_BYTELIT: return parse_byte_lit(parser);
    case TOK_FLOATLIT: return parse_float_lit(parser);
    case TOK_INTLIT: return parse_int_lit(parser);
    case TOK_STRLIT: return parse_str_lit(parser);
    default: return NULL;
  }
}

// bool_lit = "true" | "false"
ast_node_t* parse_bool_lit(parser_t* parser) {
  if (parser->current.type != TOK_BOOLLIT) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_BOOL_LIT);
  if (!node) return NULL;

  node->src_span = parser->current.src_span;

  if (memcmp(parser->current.lexeme, "true", 4) == 0)
    node->lit.value.bool_value = true;
  else
    node->lit.value.bool_value = false;

  parser_advance(parser);

  return node;
}

ast_node_t* parse_byte_lit(parser_t* parser) {
  if (parser->current.type != TOK_BYTELIT) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_BYTE_LIT);
  if (!node) return NULL;

  node->src_span = parser->current.src_span;
  
  if (parser->current.length == 2)
    node->lit.value.byte_value = '\0';
  else
    node->lit.value.byte_value = parser->current.lexeme[1];

  parser_advance(parser);

  return node;
}

ast_node_t* parse_float_lit(parser_t* parser) {
  if (parser->current.type != TOK_FLOATLIT) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_FLOAT_LIT);
  if (!node) return NULL;

  node->src_span = parser->current.src_span;

  // temporary 0-teriminated buffer for float lit
  size_t tmplen = parser->current.length + 1;
  char tmp[tmplen];
  memcpy(tmp, parser->current.lexeme, tmplen - 1);
  tmp[tmplen - 1] = '\0';

  char* endptr;
  errno = 0;
  double value = strtod(tmp, &endptr);

  if (tmp + tmplen - 1 != endptr || tmp == endptr) return NULL;
  if (errno == ERANGE) return NULL;

  node->lit.value.float_value = value;

  parser_advance(parser);

  return node;
}

ast_node_t* parse_int_lit(parser_t* parser) {
  if (parser->current.type != TOK_INTLIT) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_INT_LIT);
  if (!node) return NULL;

  node->src_span = parser->current.src_span;

  // same as parse_float_lit
  size_t length = parser->current.length;
  char nptr[length + 1];
  char* endptr;
  errno = 0;

  memcpy(nptr, parser->current.lexeme, length);
  nptr[length] = '\0';
  
  unsigned long long value = strtoull(nptr, &endptr, 10);
  if (nptr + length != endptr || nptr == endptr) return NULL;
  if (errno == ERANGE) return NULL;

  node->lit.value.int_value = value;

  parser_advance(parser);

  return node;
}

ast_node_t* parse_str_lit(parser_t* parser) {
  if (parser->current.type != TOK_STRLIT) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_STR_LIT);
  if (!node) return NULL;

  node->src_span = parser->current.src_span;

  size_t length = parser->current.length;
  if (length > 2) {
    node->lit.value.string_value.data = parser->current.lexeme + 1;
    node->lit.value.string_value.length = length - 2;
  } else {
    node->lit.value.string_value.data = NULL;
    node->lit.value.string_value.length = 0;
  }

  parser_advance(parser);

  return node;
}

// literal = primitive_literal | rec_lit
ast_node_t* parse_lit(parser_t* parser) {
  if (is_primitve_lit(parser))
    return parse_primitive_lit(parser);

  return parse_rec_lit(parser);
}

bool is_rec_lit(parser_t* parser) {
  if (!is_qual_id(parser)) return false;
  return parser_consume(parser, TOK_LCURL);
}

// rec_lit = qual_id "{" [ rec_field_init { "," rec_field_init } ] "}"
ast_node_t* parse_rec_lit(parser_t* parser) {
  if (parser->current.type != TOK_ID) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_REC_LIT);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->rec_lit.type_name = parse_qual_id(parser);
  if (!node->rec_lit.type_name) return NULL;

  if (!parser_consume(parser, TOK_LCURL)) return NULL;

  size_t start, count;
  start = parser->stack->count;

  // TODO: Improve logic with comma?
  while (parser->current.type != TOK_RCURL) {
    if (!ast_node_stack_push(parser->stack, parse_rec_field_init(parser)))
      return NULL;

    if (!parser_consume(parser, TOK_COMMA))
      break;
  }

  if (parser->current.type != TOK_RCURL) return NULL;

  count = parser->stack->count - start;
  parser->stack->count = start;

  node->src_span.end = parser->current.src_span.end;
  node->rec_lit.fields = (ast_node_list_t) { 0 };

  if (count > 0) {
    node->rec_lit.fields.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!node->rec_lit.fields.items) return NULL;
    memcpy(node->rec_lit.fields.items, parser->stack->items + start, count * sizeof(ast_node_t*));
    node->rec_lit.fields.count = count;
  }

  parser_advance(parser);

  return node;
}

// rec_field_init = id ":" expression
ast_node_t* parse_rec_field_init(parser_t* parser) {
  if (parser->current.type != TOK_ID) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_REC_FIELD_INIT);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->rec_field_init.name = parse_id(parser);
  if (!node->rec_field_init.name) return NULL;

  if (!parser_consume(parser, TOK_COL)) return NULL;

  // WE ALLOW ONLY INTLITS HERE TO TEST IT

  if (parser->current.type != TOK_INTLIT) return NULL;

  node->src_span.end = parser->current.src_span.end;

  node->rec_field_init.value = parse_int_lit(parser);
  if (!node->rec_field_init.value) return NULL;

  return node;
}

bool is_var_decl_start(parser_t* parser) {
  if (is_builtin_type(parser))
    parser_advance(parser);
  else if (!is_qual_id(parser))
    return false;

  if (!parser_consume(parser, TOK_ID)) return false;

  if (parser->current.type == TOK_EQ || parser->current.type == TOK_SEMICOLON) return true;

  return false;
}

// var_decl = type id [ "=" expr ] ";" 
ast_node_t* parse_var_decl(parser_t* parser) {
  ast_node_t* node = ast_alloc(parser->arena, AST_VAR_DECL);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->var_decl.type = parse_type(parser);
  if (!node->var_decl.type) return NULL;

  node->var_decl.name = parse_id(parser);
  if (!node->var_decl.name) return NULL;

  if (parser_consume(parser, TOK_EQ)) {
    node->var_decl.expr = parse_expr(parser);
    if (!node->var_decl.expr) return NULL;
  }

  node->src_span.end = parser->current.src_span.end;

  if (!parser_consume(parser, TOK_SEMICOLON)) return NULL;

  return node;
}

// func_decl = type [ func_receiver ] id "(" [ param_list ] ")" block
ast_node_t* parse_func_decl(parser_t* parser) {
  ast_node_t* node = ast_alloc(parser->arena, AST_FUNC_DECL);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->func_decl.return_type = parse_type(parser);
  if (!node->func_decl.return_type) return NULL;

  node->func_decl.receiver = NULL;

  if (parser->current.type == TOK_LPAREN) {
    node->func_decl.receiver = parse_func_receiver(parser);
    if (!node->func_decl.receiver) return NULL;
  }

  node->func_decl.name = parse_id(parser);
  if (!node->func_decl.name) return NULL;

  if (!parser_consume(parser, TOK_LPAREN)) return NULL;

  size_t start, count;
  start = parser->stack->count;

  // TODO: maybe improve logic!
  while (!parser_consume(parser, TOK_RPAREN)) {
    if (!ast_node_stack_push(parser->stack, parse_func_param(parser))) return NULL;

    if (parser->current.type == TOK_COMMA)
      parser_advance(parser);
  }

  count = parser->stack->count - start;
  parser->stack->count = start;

  node->func_decl.params = (ast_node_list_t) { 0 };
  if (count > 0) {
    node->func_decl.params.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!node->func_decl.params.items) return NULL;

    memcpy(node->func_decl.params.items, parser->stack->items + start, count * sizeof(ast_node_t*));
    node->func_decl.params.count = count;
  }

  node->func_decl.body = parse_block(parser);
  if (!node->func_decl.body) return NULL;

  node->src_span.end = node->func_decl.body->src_span.end;

  return node;
}

// func_receiver = "(" id id ")" "."
ast_node_t* parse_func_receiver(parser_t* parser) {
  if (parser->current.type != TOK_LPAREN) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_FUNC_RECEIVER);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  parser_advance(parser);

  node->func_receiver.type_name = parse_id(parser);
  if (!node->func_receiver.type_name) return NULL;

  node->func_receiver.name = parse_id(parser);
  if (!node->func_receiver.name) return NULL;

  if (!parser_consume(parser, TOK_RPAREN)) return NULL;

  node->src_span.end = parser->current.src_span.end;

  if (!parser_consume(parser, TOK_DOT)) return NULL;

  return node;
}

// func_param = type id
ast_node_t* parse_func_param(parser_t* parser) {
  ast_node_t* node = ast_alloc(parser->arena, AST_FUNC_PARAM);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->func_param.type = parse_type(parser);
  if (!node->func_param.type) return NULL;

  node->src_span.end = parser->current.src_span.end;

  node->func_param.name = parse_id(parser);
  if (!node->func_param.name) return NULL;

  return node;
}

ast_node_t* parse_block(parser_t* parser) {
  if (parser->current.type != TOK_LCURL) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_BLOCK);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  parser_advance(parser);

  size_t start, count;
  start = parser->stack->count;

  while (parser->current.type != TOK_RCURL)
    if (!ast_node_stack_push(parser->stack, parse_stmt(parser))) return NULL;

  node->src_span.end = parser->current.src_span.end;
  node->block.statements = (ast_node_list_t) { 0 };

  parser_advance(parser);

  count = parser->stack->count - start;
  parser->stack->count = start;

  if (count > 0) {
    node->block.statements.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!node->block.statements.items) return NULL;

    memcpy(node->block.statements.items, parser->stack->items + start, count * sizeof(ast_node_t*));
    node->block.statements.count = count;
  }

  return node;
}

ast_node_t* parse_stmt(parser_t* parser) {
  switch (parser->current.type) {
    case TOK_IF: return parse_if_stmt(parser);
    case TOK_FOR: return parse_for_stmt(parser);
    case TOK_WHILE: return parse_while_stmt(parser);
    case TOK_RET: return parse_return_stmt(parser);
    case TOK_RECORD: return parse_rec_decl(parser);
    default: break;
  }
  if (parser_lookahead(parser, is_var_decl_start))
    return parse_var_decl(parser);

  return parse_expr_stmt(parser);
}

// if_stmt = "if" expr block [ "else" ( if_stmt | block ) ]
ast_node_t* parse_if_stmt(parser_t* parser) {
  if (parser->current.type != TOK_IF) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_IF_STMT);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  parser_advance(parser);

  node->if_stmt.condition = parse_expr(parser);
  if (!node->if_stmt.condition) return NULL;

  node->if_stmt.then_branch = parse_block(parser);
  if (!node->if_stmt.then_branch) return NULL;

  node->if_stmt.else_branch = NULL;

  if (parser_consume(parser, TOK_ELSE)) {
    if (parser->current.type == TOK_IF)
      node->if_stmt.else_branch = parse_if_stmt(parser);
    else
      node->if_stmt.else_branch = parse_block(parser);

    if (!node->if_stmt.else_branch) return NULL;
  }

  if (node->if_stmt.else_branch)
    node->src_span.end = node->if_stmt.else_branch->src_span.end;
  else
    node->src_span.end = node->if_stmt.then_branch->src_span.end;

  return node;
}

// for_stmt = "for" [ expr ] ";" [ expr ] ";" [ expr ] block
ast_node_t* parse_for_stmt(parser_t* parser) {
  if (parser->current.type != TOK_FOR) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_FOR_STMT);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  parser_advance(parser);

  node->for_stmt.init = NULL;
  if (parser->current.type != TOK_SEMICOLON) {
    node->for_stmt.init = parse_expr(parser);
    if (!node->for_stmt.init) return NULL;
  }

  if (!parser_consume(parser, TOK_SEMICOLON)) return NULL;

  node->for_stmt.condition = NULL;
  if (parser->current.type != TOK_SEMICOLON) {
    node->for_stmt.condition = parse_expr(parser);
    if (!node->for_stmt.condition) return NULL;
  }

  if (!parser_consume(parser, TOK_SEMICOLON)) return NULL;

  node->for_stmt.step = NULL;
  if (parser->current.type != TOK_LCURL) {
    node->for_stmt.step = parse_expr(parser);
    if (!node->for_stmt.step) return NULL;
  }

  node->for_stmt.body = parse_block(parser);
  if (!node->for_stmt.body) return NULL;

  node->src_span.end = node->for_stmt.body->src_span.end;

  return node;
}

ast_node_t* parse_while_stmt(parser_t* parser) {
  if (parser->current.type != TOK_WHILE) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_WHILE_STMT);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  parser_advance(parser);

  node->while_stmt.condition = parse_expr(parser);
  if (!node->while_stmt.condition) return NULL;

  node->while_stmt.body = parse_block(parser);
  if (!node->while_stmt.body) return NULL;

  node->src_span.end = node->while_stmt.body->src_span.end;

  return node;
}

ast_node_t* parse_return_stmt(parser_t* parser) {
  if (parser->current.type != TOK_RET) return NULL;

  ast_node_t* node = ast_alloc(parser->arena, AST_RETURN_STMT);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  parser_advance(parser);

  node->return_stmt.expr = parse_expr(parser);
  if (!node->return_stmt.expr) return NULL;

  if (parser->current.type != TOK_SEMICOLON) return NULL;

  node->src_span.end = parser->current.src_span.end;

  parser_advance(parser);

  return node;
}

ast_node_t* parse_expr_stmt(parser_t* parser) {
  ast_node_t* node = ast_alloc(parser->arena, AST_EXPR_STMT);
  if (!node) return NULL;

  node->src_span.start = parser->current.src_span.start;

  node->expr_stmt.expr = parse_expr(parser);
  if (!node->expr_stmt.expr) return NULL;

  node->src_span.end = parser->current.src_span.end;

  if (!parser_consume(parser, TOK_SEMICOLON)) return NULL;

  return node;
}

ast_node_t* parse_expr(parser_t* parser) {

  return parse_int_lit(parser);
}

// assignment = logical_or [ "=" assignment ]
// ast_node_t* parse_assignment()


bool is_unary_op(parser_t* parser) {
  switch (parser->current.type) {
    case TOK_ASTERISK:
    case TOK_BNOT:
    case TOK_MINUS:
    case TOK_LNOT:
      return true;
    default: return false;
  }
}

// multiplicative = unary { ( "*" | "/" | "%" ) unary }
ast_node_t* parse_multiplicative(parser_t* parser) {
  ast_node_t* l_expr = parse_unary(parser);
  if (!l_expr) return NULL;

  // ...

  return l_expr;
}

// unary = { "*" | "!" | "-" | "not" } postfix
ast_node_t* parse_unary(parser_t* parser) {
  if (is_unary_op(parser)) {
    ast_node_t* node = ast_alloc(parser->arena, AST_UNARY);
    if (!node) return NULL;

    node->op_unary.op = parser->current.type;
    parser_advance(parser);
    node->op_unary.expr = parse_unary(parser);
    if (!node->op_unary.expr) return NULL;

    return node;
  }

  return parse_postfix(parser);
}

ast_node_t* parse_postfix(parser_t* parser) {
  ast_node_t* node = parse_primary(parser);
  if (!node) return NULL;

  bool more = true;
  while (more) {
    switch (parser->current.type) {
      case TOK_LPAREN:
        node = parse_call_suffix(parser, node);
        break;
      case TOK_LBRACK:
        node = parse_index_suffix(parser, node);
        break;
      case TOK_DOT:
      case TOK_MINUSGT:
        node = parse_member_suffix(parser, node);
        break;
      default:
        more = false;

      if (more && !node) return NULL;
    }
  }

  if (parser->current.type == TOK_PLUSPLUS || parser->current.type == TOK_MINUSMINUS) {
    ast_node_t* outer = ast_alloc(parser->arena, AST_UNARY);
    if (!outer) return NULL;

    outer->op_unary.op = parser->current.type;
    outer->op_unary.expr = node;
    outer->src_span.start = node->src_span.start;
    outer->src_span.end = parser->current.src_span.end;

    parser_advance(parser);
    node = outer;
  }

  return node;
}

// primary = primitive_lit | rec_lit | id | ( "(" expr ")" )
ast_node_t* parse_primary(parser_t* parser) {
  if (is_primitve_lit(parser))
    return parse_primitive_lit(parser);

  if (parser_consume(parser, TOK_LPAREN)) {
    ast_node_t* expr = parse_expr(parser);
    if (!expr) return NULL;

    if (!parser_consume(parser, TOK_RPAREN)) return NULL;

    return expr;
  }

  if (parser_lookahead(parser, is_rec_lit))
    return parse_rec_lit(parser);

  return parse_id(parser);
}

// call_suffix = "(" [ expr { "," expr } ] ")"
ast_node_t* parse_call_suffix(parser_t* parser, ast_node_t* inner) {
  if (!parser_consume(parser, TOK_LPAREN)) return NULL;

  ast_node_t* outer = ast_alloc(parser->arena, AST_CALL);
  if (!outer) return NULL;

  outer->src_span.start = inner->src_span.start;
  outer->call.callee = inner;

  size_t start, count;
  start = parser->stack->count;

  while (parser->current.type != TOK_RPAREN) {
    if (!ast_node_stack_push(parser->stack, parse_expr(parser))) return NULL;
    
    parser_consume(parser, TOK_COMMA);
  }

  outer->src_span.end = parser->current.src_span.end;

  parser_advance(parser);

  count = parser->stack->count - start;
  parser->stack->count = start;

  outer->call.args = (ast_node_list_t) { 0 };

  if (count > 0) {
    outer->call.args.items = arena_alloc(parser->arena, count * sizeof(ast_node_t*), _Alignof(ast_node_t*));
    if (!outer->call.args.items) return NULL;

    memcpy(outer->call.args.items, parser->stack->items + start, count * sizeof(ast_node_t*));
    outer->call.args.count = count;
  }

  return outer;
}

// index_suffix = "[" expr "]"
ast_node_t* parse_index_suffix(parser_t* parser, ast_node_t* inner) {
  if (!parser_consume(parser, TOK_LBRACK)) return NULL;

  ast_node_t* outer = ast_alloc(parser->arena, AST_INDEX);
  if (!outer) return NULL;

  outer->src_span.start = inner->src_span.start;
  outer->index.base = inner;
  
  outer->index.subscript = parse_expr(parser);
  if (!outer->index.subscript) return NULL;

  outer->src_span.end = parser->current.src_span.end;

  if (!parser_consume(parser, TOK_RBRACK)) return NULL;

  return outer;
}

// member_suffix = ( "." | "->" ) id
ast_node_t* parse_member_suffix(parser_t* parser, ast_node_t* inner) {
  if (parser->current.type != TOK_DOT && parser->current.type != TOK_MINUSGT) return NULL;

  ast_node_t* outer = ast_alloc(parser->arena, AST_MEMBER);
  if (!outer) return NULL;

  outer->member.op = parser->current.type;
  parser_advance(parser);

  outer->src_span.start = inner->src_span.start;
  outer->member.base = inner;

  outer->member.name = parse_id(parser);
  if (!outer->member.name) return NULL;

  outer->src_span.end = outer->member.name->src_span.end;

  return outer;
}


// //assignment = logical_or [ "=" assignment ]
// bool parse_assignment(parser_t* parser) {
//   if (!parse_logical_or(parser)) {
//     return false;
//   }
//   if (parser_consume(parser, TOK_EQ)) {
//     return parse_assignment(parser);
//   }
//   return true;
// }

// bool parse_logical_or(parser_t* parser) {
//   if (!parse_logical_xor(parser)) {
//     return false;
//   }
//   while (parser_consume(parser, TOK_LOR)) {
//     if (!parse_logical_xor(parser)) {
//       return false;
//     }
//   }
//   return true;
// }

// bool parse_logical_xor(parser_t* parser) {
//   if (!parse_logical_and(parser)) {
//     return false;
//   }
//   while (parser_consume(parser, TOK_LXOR)) {
//     if (!parse_logical_and(parser)) {
//       return false;
//     }
//   }
//   return true;
// }

// bool parse_logical_and(parser_t* parser) {
//   if (!parse_bitwise_or(parser)) {
//     return false;
//   }
//   while (parser_consume(parser, TOK_LAND)) {
//     if (!parse_bitwise_or(parser)) {
//       return false;
//     }
//   }
//   return true;
// }
